# wasmer

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  Makefile  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: extendr-wrappers.R
man/: wasmer_call_function_ext.Rd  wasmer_call_function_safe_ext.Rd  wasmer_compile_wasm_ext.Rd  wasmer_compile_wat_ext.Rd  wasmer_function_new_ext.Rd  wasmer_function_new_f64_f64_to_f64.Rd  wasmer_function_new_f64_to_f64.Rd  wasmer_function_new_i32_i32_to_i32.Rd  wasmer_function_new_i32_to_i32.Rd  wasmer_function_new_i32_to_void.Rd  wasmer_function_new_static_ext.Rd  wasmer_function_new_void_to_i32.Rd  wasmer_get_exported_table_ext.Rd  wasmer_hello_world_example_ext.Rd  wasmer_host_function_example_ext.Rd  wasmer_instantiate_ext.Rd  wasmer_instantiate_with_math_imports_ext.Rd  wasmer_instantiate_with_table_ext.Rd  wasmer_list_exports_ext.Rd  wasmer_list_function_signatures_ext.Rd  wasmer_math_example_ext.Rd  wasmer_memory_grow_ext.Rd  wasmer_memory_read_ext.Rd  wasmer_memory_read_string_ext.Rd  wasmer_memory_size_ext.Rd  wasmer_memory_write_ext.Rd  wasmer_register_r_function_ext.Rd  wasmer_runtime_new.Rd  wasmer_runtime_new_with_compiler_ext.Rd  wasmer_runtime_release_ressources.Rd  wasmer_table_get_ext.Rd  wasmer_table_grow_ext.Rd  wasmer_table_new_ext.Rd  wasmer_table_set_ext.Rd  (+2 more)
reference/: index.html  (+71 more)
src/rust/: Cargo.toml
src/rust/src/: api.rs  compiler_utils.rs  host_functions.rs  lib.rs  memory.rs  type_converter.rs  wasi_utils.rs
(+10 files in other folders)
