[package]
name = 'wasmer'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'wasmer'

[dependencies]
extendr-api = '0.8.1'
wasmer = { version = "6.1.0", features = ["cranelift", "compiler", "singlepass"] }
wasmer-wasix = "0.601.0"
anyhow = "1.0"
serde_json = "1.0"
once_cell = "1.18"
lazy_static = "1.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
lto = true
codegen-units = 1
